...
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addedit_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorTextSecondary"
                android:layout_marginEnd="36dp"
                android:textDirection="locale"
                app:hintAnimationEnabled="false" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addedit_account_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/name"
                    android:maxLength="55"
                    android:singleLine="true" />
...
                    android:id="@+id/addedit_account_box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addedit_account_initial_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorTextSecondary"
                        android:textDirection="locale"
                        app:startIconTint="#000000"
                        app:startIconDrawable="@drawable/ic_account_balance_24"
                        app:hintAnimationEnabled="false" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addedit_account_initial_value_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:drawablePadding="0dp"
                            android:hint="@string/account_initial_value"
                            android:textColor="@color/colorTextHighlight"
                            android:inputType="numberDecimal"
                            android:layoutDirection="locale"
                            android:textDirection="locale" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.tiper.MaterialSpinner
                        android:id="@+id/addedit_account_currency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:height="50dp"
                        android:hint="@string/account_currency"
                        android:textColorHint="@color/colorTextSecondary"
...
                        android:text="@string/account_currency_cannot_change"
                        android:textSize="12sp"
                        android:visibility="gone"
                        android:layout_marginStart="16dp" />

                    <com.tiper.MaterialSpinner
                        android:id="@+id/addedit_account_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/account_type"
                        android:textColorHint="@color/colorTextSecondary"
                        android:textDirection="locale"
...
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/addedit_account_color_button"
                            style="@style/Widget.AppCompat.ImageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/color_picker"
                            android:cropToPadding="false"
                            android:isScrollContainer="false"
...
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addedit_account_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:focusable="true"
...
