...
    <string name="toggle_more_options">Toggle more options</string>

    <!--  Accounts fragment  -->
    <string name="accounts_test_month">September 2020</string>

    <!-- Accounts AddEdit -->
    <string name="account_new">New account</string>
    <string name="account_type_bank">Bank account</string>
    <string name="account_type_informal">Informal (cash)</string>
    <string name="account_type_savings">Savings</string>
    <string name="account_type_inversions">Inversions</string>
    <string name="account_type_credit_card">Credit card</string>
    <string name="account_type_other">Other</string>
...

    <string name="account_currency">Account currency</string>
    <string name="account_currency_cannot_change">You cannot change an account\'s currency</string>
    <string name="account_type">Account type</string>
    <string name="account_include_in_sum">Include in homepage sum</string>
    <string name="account_pick_color">Pick a color to identify this account</string>
    <string name="account_pick_color_title">Pick a color</string>
    <string name="account_error_name">Account name can\'t be empty.</string>

    <string name="account_error_initial_value">Initial value is not a valid number.</string>
    <string name="account_message_saved">Your account was saved correctly.</string>
    <string name="account_message_updated">Your account was updated correctly.</string>
    <string name="account_message_archived">Your account was archived correctly.</string>
    <string name="account_current_balance">Current balance</string>

    <!--  Account card  -->
...
    <string name="account_card_options">Account options</string>
    <string name="account_icon">Account type icon</string>
    <string name="account_initial_value_icon">Money icon</string>
    <string name="account_included_in_sum_icon">Check/Cross icon</string>
    <string name="account_card_details">Details</string>

    <string name="account_card_modify">Modify account</string>
    <string name="account_card_transactions">See transactions</string>
    <string name="account_card_archive">Archive account</string>
    <string name="account_card_delete">Delete account</string>
    <string name="account_card_archive_info">You can restore this account and related transactions later.</string>
    <string name="account_card_delete_warning">Are you sure you want to do this? This action cannot be undone.</string>
    <string name="account_card_restore">Restore</string>
...
